# robinhood-algo-trading-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ALPACA_URL_VERIFICATION.md  CHANGELOG.md  CLAUDE.md  CLI_README.md  CODEBASE_ARCHITECTURE.md  CONTRIBUTING.md  CRYPTO_SETUP.md  DEPENDABOT_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEPLOYMENT_QUICKSTART.md  DOCKER_README.md  DOKPLOY_DEPLOYMENT.md  DOKPLOY_DEPLOYMENT_CHECKLIST.md  DOKPLOY_ENV_VARS.md  DOKPLOY_SETUP_WALKTHROUGH.md  DOKPLOY_SSH_SETUP.md  Dockerfile  DCodingStocksspecsstop-loss-automationNOTES.md  HETZNER_DEPLOY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_AGENT_IMPLEMENTATION_GUIDE.md  NOTES.md  ORCHESTRATOR_INTEGRATION.md  QUICKSTART-spec-flow.md  QUICKSTART.md  README.md  ROADMAP_GITHUB_MIGRATION.md  ROLLBACK.md  SECURITY.md  SECURITY_INCIDENT_2025-11-10.md  TELEGRAM_MONITORING.md  TODO_IMPLEMENTATION_SUMMARY.md  api_test_results.md  (+26 more)
.backtest_cache/: AAPL_2023-01-01_2023-12-31.parquet  AAPL_2024-01-01_2024-01-31.parquet  AAPL_2024-01-01_2025-01-01.parquet  QQQ_2024-01-01_2025-01-01.parquet  SPY_2024-01-01_2025-01-01.parquet
.claude/: AGENT_INTEGRATION_ANALYSIS.md  COMMANDS_REVIEW_SUMMARY.md  MCP_INTEGRATION_STRATEGY.md
.claude/agents/: backend-dev.md  cfipros-backend-dev.md  cfipros-ci-cd-release.md  cfipros-contracts-sdk.md  cfipros-database-architect.md  cfipros-debugger.md  cfipros-docs-context.md  cfipros-frontend-shipper.md  cfipros-qa-test.md  ci-cd-release.md  contracts-sdk.md  database-architect.md  finalize-phase-agent.md  frontend-shipper.md  github-repo-manager.md  optimize-phase-agent.md  plan-phase-agent.md  qa-test.md  senior-code-reviewer.md  ship-prod-phase-agent.md  ship-staging-phase-agent.md  tasks-phase-agent.md  tdd-coverage-enhancer.md  test-runner.md
.claude/commands/: README.md  analyze.md  build-local.md  check-env.md  clarify.md  constitution.md  debug.md  deploy-prod.md  deployment-budget.md  design-functional.md  design-polish.md  design-variations.md  design.md  dry-run.md  feature.md  finalize.md  fix-ci.md  flow.md  implement.md  init-brand-tokens.md  init-project.md  measure-heart.md  metrics.md  optimize.md  phase-1-ship.md  phase-2-ship.md  plan.md  preflight.md  preview.md  quick.md  release.md  research-design.md  roadmap.md  route-agent.md  setup-constitution.md  ship-prod.md  ship-staging.md  ship-status.md  ship.md  spec-flow.md  (+7 more)
.claude/skills/: SKILL_DEPENDENCIES.md  SKILL_UPDATE_MECHANISM.md  anti-duplication.md  breaking-change-detector.md  caching-strategy.md  context-budget-enforcer.md  dependency-conflict-resolver.md  deployment-safety.md  git-workflow-enforcer.md  hallucination-detector.md  parallel-execution-optimizer.md  project-docs-integration.md  spec-compliance-validator.md  task-status-sync.md  tdd-enforcer.md  x-announcement.md
.github/: dependabot.yml
.github/workflows/: deploy.yml
.spec-flow/: RESUME.md
.spec-flow/docs/: git-workflow-integration.md
.spec-flow/memory/: CONSTITUTION_CHANGELOG.md  constitution.md  roadmap.md
.spec-flow/memory-backup-2025-10-09T00-40-09/: DONT_DO.md  roadmap.md
.spec-flow/memory-backup-2025-10-17T02-18-16/: constitution.md
.spec-flow/memory-backup-2025-10-17T17-36-50/: roadmap.md
.spec-flow/scripts/: brownfield-token-scanner.js  design-lint.js  migrate-roadmap.py
.spec-flow/templates/: CODEOWNERS-template  CONTRIBUTING-template.md  SECURITY-template.md  analysis-report-template.md  checklist-template.md  code-review-report-template.md.backup  deployment-tracking-template.md  engineering-principles.md  epic-breakdown-template.md  error-log-template.md.backup  heart-metrics-template.md  notes-update-template.sh  optimization-report-template.md  plan-template.md  plan-template.md.backup  preview-checklist-template.md  project-configuration.md  roadmap-template.md.backup  ship-report-template.md  ship-report-template.md.backup  spec-template.md  (+5 more)
api/: TASK_T005_SUMMARY.md  TASK_T011_SUMMARY.md  TASK_T012_SUMMARY.md  TASK_T030_T031_SUMMARY.md  debug_models.py  debug_test.py  test_cancel_manual.py  test_migration.md
config/: dashboard-targets.yaml  phase4_feature_config.yaml
deployment/: deploy.sh  health-monitor.sh  trading-bot.service
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  OPERATIONS.md  TA_FRAMEWORK.md  TUTORIAL.md  backtest_results.md  dashboard-orchestration-implementation.md  dashboard-usage.md  multi-agent-setup.md  vps-deployment-guide.md
examples/: README.md  custom_strategy_example.py  ml_strategy_generation.py  run_dashboard.py  sample_strategies.py  simple_backtest.py  strategy_comparison.py  ta_framework_example.py
experiments/: experiment_config.yaml  experiment_runner.py  experiment_runner_phase4.py  experiment_tracker.py  experiments.db
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
mcp_servers/: README.md  backtest_server.py  market_data_server.py  position_server.py  risk_server.py
scripts/: cancel_crypto_orders.py  check_alpaca_status.py  deploy-docker.sh  deploy-to-vps.sh  docker-backup.sh  hetzner-setup.sh  init_agent_tables.py  init_sqlite_tables.py  monitor-workflow.sh  setup-database.sh  start_api.sh  sync_watchlist_to_alpaca.py  test_telegram_notification.py  update_watchlist_curl.sh  verify-database.sh  verify_alpaca_watchlist.py
tests/: __init__.py  conftest.py  ml_strategy_test.py  test.html  test_all_rules.py  test_base_models.py  test_claude_manager.py  test_experiment_framework.py  test_production_urls.py  test_risk_calculation.py  test_rule_strategies.py  test_ta_framework.py
(+1540 files in other folders)
