[project]
name = "trading-bot"
version = "0.1.0"
description = "Robinhood algorithmic trading bot using robin_stocks"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "robin-stocks==3.0.5",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "PyYAML==6.0.1",
    "rich==13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-asyncio==0.23.3",
    "mypy==1.8.0",
    "types-requests==2.31.0.20240106",
    "ruff==0.1.14",
    "pylint==3.0.3",
    "bandit==1.7.6",
]

backtest = [
    "backtrader==1.9.78.123",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/trading_bot",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",  # Constitution v1.0.0: 90% coverage required
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Constitution v1.0.0: Type hints required
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
]

[tool.bandit]
exclude_dirs = ["tests", "backtests"]
skips = ["B101"]  # Allow assert in non-production code

[tool.coverage.run]
source = ["src/trading_bot"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90  # Constitution v1.0.0: §Pre_Deploy quality gate
