[project]
name = "trading-bot"
version = "0.1.0"
description = "Robinhood algorithmic trading bot using robin_stocks"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "robin-stocks>=3.4.0",
    "pandas==2.3.3",
    "numpy==1.26.3",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "PyYAML==6.0.1",
    "rich==13.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==4.1.0",
    "pytest-mock==3.15.1",
    "pytest-asyncio==0.23.3",
    "freezegun==1.5.5",
    "mypy==1.18.2",
    "types-requests==2.31.0.20240106",
    "types-PyYAML==6.0.12.20250915",
    "ruff==0.14.1",
    "pylint==3.0.3",
    "bandit==1.7.6",
]

backtest = [
    "backtrader==1.9.78.123",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/trading_bot/order_management",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=90",  # Constitution v1.0.0: 90% coverage required
]
markers = [
    "integration: marks tests as integration tests (make real API calls, can be slow)",
    "slow: marks tests as slow (may take >10 seconds)",
    "smoke: marks tests as smoke tests (quick validation of critical paths)",
    "acceptance: marks tests as NFR validation acceptance tests",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
exclude = [
    'tests',  # Tests are checked separately with ignore_errors
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Constitution v1.0.0: Type hints required
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "robin_stocks.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Allow assert in tests
]

[tool.bandit]
exclude_dirs = ["tests", "backtests"]
skips = ["B101"]  # Allow assert in non-production code

[tool.coverage.run]
source = ["src/trading_bot/order_management"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]
# Order management module lives under src/trading_bot/order_management and remains within coverage scope

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90  # Constitution v1.0.0: §Pre_Deploy quality gate
